# db_mocker

./: .gitignore  Cargo.toml  readme.md
Planning/: DB_mocker Planning v1.0.excalidraw  DB_mocker Planning v1.1.excalidraw  DB_mocker Planning v1.2.excalidraw  DB_mocker Planning v1.3.excalidraw  DB_mocker Planning v1.3_1.excalidraw
src/: db_mocker.rs  lib.rs  main.rs  virtual_database.rs
src/db_mocker/: file_handling.rs  mod.rs  validator.rs  virtual_db.rs
src/db_mocker/db_handling/: mod.rs  my_sql.rs
src/db_mocker/validator/: key_word_checker.rs
