[package]
name = "db_mocker"
version = "0.1.0"
edition = "2021"
authors = ["Marc-Stephane Knopf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization and Deserialazation of data types and structs
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
serde_yaml = "0.9.25"

# Easy error handling - use whatever feels better to use
anyhow = "1.0.75"
thiserror = "1.0.48"

# Library to create fake data
fake = { version = "2.8", features = ["derive"] }

# Library to query sql databases
sqlx = { version = "0.7.1", features = [
	"runtime-tokio",
	"tls-rustls",
	"mysql",
	"macros",
	"uuid",
	"json",
] }

# Async runtime for sqlx
tokio = { version = "1.32.0", features = ["rt", "macros"] }

# Datetime crate
chrono = { version = "0.4.31", features = ["serde"] }
# Generate UUIDs
uuid = { version = "1.4.1", features = ["v4"] }

# Reading from config and env files for the tests
config = "0.13.3"

# Diagnostic information / logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Error report handler for panics. For colorful consistent panic logs
color-eyre = "0.6.2"

# Optimize sqlx macros to a high level for better performance
[profile.dev.package.sqlx-macros]
opt-level = 3
